--- a/views/login.pug
+++ b/views/login.pug
@@ -8,7 +8,7 @@ html
   body.login-page
     .form
       .thumbnail
-        img(src='/images/login-logo.png')
+        img(src='/images/login-logo2.png')
       if (alertMessage.length > 0)
         p.alert-message= alertMessage
       form.login-form(action='/login', method='post')
