--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -13,7 +13,7 @@
     text-align: center;
 }
 .form .thumbnail {
-    background: #35b88f;
+    background: #183026;
     width: 150px;
     height: 150px;
     margin: 0 auto 30px;
